--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "name": "xiaobudongzhang/laravel-sms",
     "description": "lavarel sms api",
     "license": "MIT",
+    "type": "library",
     "authors": [
         {
             "name": "xiaobudongzhang",
@@ -10,5 +11,8 @@
     ],
     "require": { 
     	"xiaobudongzhang/sms": "dev-master"
+    },
+    "autoload": {
+        "psr-4": { "Byz\\LaravelSms\\": "Src/" }
     }
 }
